InsuranceOrg/force-app/main/default/objects/vlocity_ins__Datastore__c/vlocity_ins__Datastore__c.object-meta.xml
<CustomObject>
    <description>Vlocity Data store to be used as persistent cache.</description>
    <label>Vlocity Data Store</label>
    <nameField>
        <label>VlocityDataStore Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Data Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>