InsuranceOrg/force-app/main/default/objects/vlocity_ins__Datastore__c/fields/vlocity_ins__ProductId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies a product when this entry is related to a specific product.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Data Store Item</relationshipLabel>
    <relationshipName>DataStoreItems</relationshipName>
    <type>Lookup</type>
</CustomField>