InsuranceOrg/force-app/main/default/objects/vlocity_ins__Datastore__c/fields/vlocity_ins__Value__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Value__c</fullName>
    <description>The long text value of the data store entry.</description>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>