InsuranceOrg/force-app/main/default/objects/vlocity_ins__Datastore__c/recordTypes/vlocity_ins__CPQAPI.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__CPQAPI</fullName>
    <active>true</active>
    <description>CPQ API partition</description>
    <label>CPQAPI</label>
</RecordType>