InsuranceOrg/force-app/main/default/objects/vlocity_ins__Datastore__c/recordTypes/vlocity_ins__ProductHierarchy.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__ProductHierarchy</fullName>
    <active>true</active>
    <description>Flatenned Product Hierarchy Items</description>
    <label>Product Hierarchy</label>
</RecordType>